objects/Form_Qualification_History__c.object
<CustomObject>
    <description>This object is used to track the primary and secondary history as well as product interest associated with each form completed by a prospect and associated with a lead.</description>
    <label>Form Qualification History</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>FQH #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Qualification History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <description>This field captures the value from the associated lead based on form updates sent from Pardot.</description>
        <inlineHelpText>This field captures the value from the associated lead based on form updates sent from Pardot.</inlineHelpText>
        <label>Requested Interests</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corresponding_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field associates the form history data to a specific lead/prospect combination.</description>
        <inlineHelpText>This field associates the form history data to a specific lead/prospect combination.</inlineHelpText>
        <label>Corresponding Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Forms Qualification History</relationshipLabel>
        <relationshipName>Forms_Qualification_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corresponding_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field associates the form history data to a specific contact/prospect combination.</description>
        <inlineHelpText>This field associates the form history data to a specific contact/prospect combination.</inlineHelpText>
        <label>Corresponding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms Qualification History</relationshipLabel>
        <relationshipName>Forms_Qualification_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Qualification__c</fullName>
        <description>This field captures the value from the associated lead based on form updates sent from Pardot.</description>
        <inlineHelpText>This field captures the value from the associated lead based on form updates sent from Pardot.</inlineHelpText>
        <label>Primary Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Qualification__c</fullName>
        <description>This field captures the value from the associated lead based on form updates sent from Pardot.</description>
        <inlineHelpText>This field captures the value from the associated lead based on form updates sent from Pardot.</inlineHelpText>
        <label>Secondary Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Action_Product__c</fullName>
        <description>This field captures the completion action product associated to the form corresponding to qualification and interest values.</description>
        <inlineHelpText>This field captures the completion action product associated to the form corresponding to qualification and interest values.</inlineHelpText>
        <label>Single Product Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>